working on homepage

--- a/cms-georgia/src/index.css
+++ b/cms-georgia/src/index.css
@@ -2,6 +2,6 @@
 
 @theme {
   --color-blue-dark: #21485F;
-  --color-tahiti: #3ab7bf;
-  --color-bermuda: #78dcca;
+  --color-black-light: #192934;
+  --color-yellow-icon: #efeadb;
 }
