localization done, footer done

--- a/cms-georgia/src/index.css
+++ b/cms-georgia/src/index.css
@@ -2,6 +2,7 @@
 
 @theme {
   --color-blue-dark: #21485F;
+  --color-blue-light:#2A5F80;
   --color-black-light: #192934;
   --color-yellow-icon: #efeadb;
   --color-black-shadow: #5A5A5A;
